// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Declarations - Function > Declarations - Function (pass) > "use strict"; function* g() { yield; }; f = ([...[,]] = g()) => {}; 1`] = `
{
  "body": [
    {
      "directive": "use strict",
      "expression": {
        "type": "Literal",
        "value": "use strict",
      },
      "type": "ExpressionStatement",
    },
    {
      "async": false,
      "body": {
        "body": [
          {
            "expression": {
              "argument": null,
              "delegate": false,
              "type": "YieldExpression",
            },
            "type": "ExpressionStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": true,
      "id": {
        "name": "g",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
    {
      "type": "EmptyStatement",
    },
    {
      "expression": {
        "left": {
          "name": "f",
          "type": "Identifier",
        },
        "operator": "=",
        "right": {
          "async": false,
          "body": {
            "body": [],
            "type": "BlockStatement",
          },
          "expression": false,
          "generator": false,
          "params": [
            {
              "left": {
                "elements": [
                  {
                    "argument": {
                      "elements": [
                        null,
                      ],
                      "type": "ArrayPattern",
                    },
                    "type": "RestElement",
                  },
                ],
                "type": "ArrayPattern",
              },
              "right": {
                "arguments": [],
                "callee": {
                  "name": "g",
                  "type": "Identifier",
                },
                "optional": false,
                "type": "CallExpression",
              },
              "type": "AssignmentPattern",
            },
          ],
          "type": "ArrowFunctionExpression",
        },
        "type": "AssignmentExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function a( a = b  ) {} n => {  "use strict"; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "a",
        "type": "Identifier",
      },
      "params": [
        {
          "left": {
            "name": "a",
            "type": "Identifier",
          },
          "right": {
            "name": "b",
            "type": "Identifier",
          },
          "type": "AssignmentPattern",
        },
      ],
      "type": "FunctionDeclaration",
    },
    {
      "expression": {
        "async": false,
        "body": {
          "body": [
            {
              "directive": "use strict",
              "expression": {
                "type": "Literal",
                "value": "use strict",
              },
              "type": "ExpressionStatement",
            },
          ],
          "type": "BlockStatement",
        },
        "expression": false,
        "generator": false,
        "params": [
          {
            "name": "n",
            "type": "Identifier",
          },
        ],
        "type": "ArrowFunctionExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function a([ { a = x }, {} = b]) {} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "loc": {
          "end": {
            "column": 35,
            "line": 1,
          },
          "start": {
            "column": 33,
            "line": 1,
          },
        },
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "a",
        "type": "Identifier",
      },
      "loc": {
        "end": {
          "column": 35,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "params": [
        {
          "elements": [
            {
              "loc": {
                "end": {
                  "column": 22,
                  "line": 1,
                },
                "start": {
                  "column": 13,
                  "line": 1,
                },
              },
              "properties": [
                {
                  "computed": false,
                  "key": {
                    "loc": {
                      "end": {
                        "column": 16,
                        "line": 1,
                      },
                      "start": {
                        "column": 15,
                        "line": 1,
                      },
                    },
                    "name": "a",
                    "type": "Identifier",
                  },
                  "kind": "init",
                  "loc": {
                    "end": {
                      "column": 20,
                      "line": 1,
                    },
                    "start": {
                      "column": 15,
                      "line": 1,
                    },
                  },
                  "method": false,
                  "shorthand": true,
                  "type": "Property",
                  "value": {
                    "left": {
                      "loc": {
                        "end": {
                          "column": 16,
                          "line": 1,
                        },
                        "start": {
                          "column": 15,
                          "line": 1,
                        },
                      },
                      "name": "a",
                      "type": "Identifier",
                    },
                    "loc": {
                      "end": {
                        "column": 20,
                        "line": 1,
                      },
                      "start": {
                        "column": 15,
                        "line": 1,
                      },
                    },
                    "right": {
                      "loc": {
                        "end": {
                          "column": 20,
                          "line": 1,
                        },
                        "start": {
                          "column": 19,
                          "line": 1,
                        },
                      },
                      "name": "x",
                      "type": "Identifier",
                    },
                    "type": "AssignmentPattern",
                  },
                },
              ],
              "type": "ObjectPattern",
            },
            {
              "left": {
                "loc": {
                  "end": {
                    "column": 26,
                    "line": 1,
                  },
                  "start": {
                    "column": 24,
                    "line": 1,
                  },
                },
                "properties": [],
                "type": "ObjectPattern",
              },
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 24,
                  "line": 1,
                },
              },
              "right": {
                "loc": {
                  "end": {
                    "column": 30,
                    "line": 1,
                  },
                  "start": {
                    "column": 29,
                    "line": 1,
                  },
                },
                "name": "b",
                "type": "Identifier",
              },
              "type": "AssignmentPattern",
            },
          ],
          "loc": {
            "end": {
              "column": 31,
              "line": 1,
            },
            "start": {
              "column": 11,
              "line": 1,
            },
          },
          "type": "ArrayPattern",
        },
      ],
      "type": "FunctionDeclaration",
    },
  ],
  "loc": {
    "end": {
      "column": 35,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function compareArray(a, b) {
    if (b.length !== a.length) {
        return;
    }
    for (var i = 0; i < a.length; i++) {
        b[0];
    }
} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "alternate": null,
            "consequent": {
              "body": [
                {
                  "argument": null,
                  "end": 78,
                  "range": [
                    71,
                    78,
                  ],
                  "start": 71,
                  "type": "ReturnStatement",
                },
              ],
              "end": 84,
              "range": [
                61,
                84,
              ],
              "start": 61,
              "type": "BlockStatement",
            },
            "end": 84,
            "range": [
              34,
              84,
            ],
            "start": 34,
            "test": {
              "end": 59,
              "left": {
                "computed": false,
                "end": 46,
                "object": {
                  "end": 39,
                  "name": "b",
                  "range": [
                    38,
                    39,
                  ],
                  "start": 38,
                  "type": "Identifier",
                },
                "optional": false,
                "property": {
                  "end": 46,
                  "name": "length",
                  "range": [
                    40,
                    46,
                  ],
                  "start": 40,
                  "type": "Identifier",
                },
                "range": [
                  38,
                  46,
                ],
                "start": 38,
                "type": "MemberExpression",
              },
              "operator": "!==",
              "range": [
                38,
                59,
              ],
              "right": {
                "computed": false,
                "end": 59,
                "object": {
                  "end": 52,
                  "name": "a",
                  "range": [
                    51,
                    52,
                  ],
                  "start": 51,
                  "type": "Identifier",
                },
                "optional": false,
                "property": {
                  "end": 59,
                  "name": "length",
                  "range": [
                    53,
                    59,
                  ],
                  "start": 53,
                  "type": "Identifier",
                },
                "range": [
                  51,
                  59,
                ],
                "start": 51,
                "type": "MemberExpression",
              },
              "start": 38,
              "type": "BinaryExpression",
            },
            "type": "IfStatement",
          },
          {
            "body": {
              "body": [
                {
                  "end": 139,
                  "expression": {
                    "computed": true,
                    "end": 138,
                    "object": {
                      "end": 135,
                      "name": "b",
                      "range": [
                        134,
                        135,
                      ],
                      "start": 134,
                      "type": "Identifier",
                    },
                    "optional": false,
                    "property": {
                      "end": 137,
                      "range": [
                        136,
                        137,
                      ],
                      "raw": "0",
                      "start": 136,
                      "type": "Literal",
                      "value": 0,
                    },
                    "range": [
                      134,
                      138,
                    ],
                    "start": 134,
                    "type": "MemberExpression",
                  },
                  "range": [
                    134,
                    139,
                  ],
                  "start": 134,
                  "type": "ExpressionStatement",
                },
              ],
              "end": 145,
              "range": [
                124,
                145,
              ],
              "start": 124,
              "type": "BlockStatement",
            },
            "end": 145,
            "init": {
              "declarations": [
                {
                  "end": 103,
                  "id": {
                    "end": 99,
                    "name": "i",
                    "range": [
                      98,
                      99,
                    ],
                    "start": 98,
                    "type": "Identifier",
                  },
                  "init": {
                    "end": 103,
                    "range": [
                      102,
                      103,
                    ],
                    "raw": "0",
                    "start": 102,
                    "type": "Literal",
                    "value": 0,
                  },
                  "range": [
                    98,
                    103,
                  ],
                  "start": 98,
                  "type": "VariableDeclarator",
                },
              ],
              "end": 103,
              "kind": "var",
              "range": [
                94,
                103,
              ],
              "start": 94,
              "type": "VariableDeclaration",
            },
            "range": [
              89,
              145,
            ],
            "start": 89,
            "test": {
              "end": 117,
              "left": {
                "end": 106,
                "name": "i",
                "range": [
                  105,
                  106,
                ],
                "start": 105,
                "type": "Identifier",
              },
              "operator": "<",
              "range": [
                105,
                117,
              ],
              "right": {
                "computed": false,
                "end": 117,
                "object": {
                  "end": 110,
                  "name": "a",
                  "range": [
                    109,
                    110,
                  ],
                  "start": 109,
                  "type": "Identifier",
                },
                "optional": false,
                "property": {
                  "end": 117,
                  "name": "length",
                  "range": [
                    111,
                    117,
                  ],
                  "start": 111,
                  "type": "Identifier",
                },
                "range": [
                  109,
                  117,
                ],
                "start": 109,
                "type": "MemberExpression",
              },
              "start": 105,
              "type": "BinaryExpression",
            },
            "type": "ForStatement",
            "update": {
              "argument": {
                "end": 120,
                "name": "i",
                "range": [
                  119,
                  120,
                ],
                "start": 119,
                "type": "Identifier",
              },
              "end": 122,
              "operator": "++",
              "prefix": false,
              "range": [
                119,
                122,
              ],
              "start": 119,
              "type": "UpdateExpression",
            },
          },
        ],
        "end": 147,
        "range": [
          28,
          147,
        ],
        "start": 28,
        "type": "BlockStatement",
      },
      "end": 147,
      "generator": false,
      "id": {
        "end": 21,
        "name": "compareArray",
        "range": [
          9,
          21,
        ],
        "start": 9,
        "type": "Identifier",
      },
      "params": [
        {
          "end": 23,
          "name": "a",
          "range": [
            22,
            23,
          ],
          "start": 22,
          "type": "Identifier",
        },
        {
          "end": 26,
          "name": "b",
          "range": [
            25,
            26,
          ],
          "start": 25,
          "type": "Identifier",
        },
      ],
      "range": [
        0,
        147,
      ],
      "start": 0,
      "type": "FunctionDeclaration",
    },
  ],
  "end": 147,
  "range": [
    0,
    147,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f() {let f} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "f",
                  "type": "Identifier",
                },
                "init": null,
                "type": "VariableDeclarator",
              },
            ],
            "kind": "let",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f() {var f} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "name": "f",
                  "type": "Identifier",
                },
                "init": null,
                "type": "VariableDeclarator",
              },
            ],
            "kind": "var",
            "type": "VariableDeclaration",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(){ foo = new.target } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "end": 30,
            "expression": {
              "end": 30,
              "left": {
                "end": 17,
                "name": "foo",
                "range": [
                  14,
                  17,
                ],
                "start": 14,
                "type": "Identifier",
              },
              "operator": "=",
              "range": [
                14,
                30,
              ],
              "right": {
                "end": 30,
                "meta": {
                  "end": 23,
                  "name": "new",
                  "range": [
                    20,
                    23,
                  ],
                  "start": 20,
                  "type": "Identifier",
                },
                "property": {
                  "end": 30,
                  "name": "target",
                  "range": [
                    24,
                    30,
                  ],
                  "start": 24,
                  "type": "Identifier",
                },
                "range": [
                  20,
                  30,
                ],
                "start": 20,
                "type": "MetaProperty",
              },
              "start": 14,
              "type": "AssignmentExpression",
            },
            "range": [
              14,
              30,
            ],
            "start": 14,
            "type": "ExpressionStatement",
          },
        ],
        "end": 32,
        "range": [
          12,
          32,
        ],
        "start": 12,
        "type": "BlockStatement",
      },
      "end": 32,
      "generator": false,
      "id": {
        "end": 10,
        "name": "f",
        "range": [
          9,
          10,
        ],
        "start": 9,
        "type": "Identifier",
      },
      "params": [],
      "range": [
        0,
        32,
      ],
      "start": 0,
      "type": "FunctionDeclaration",
    },
  ],
  "end": 32,
  "range": [
    0,
    32,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(){ foo: bar: function f(){} } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "body": {
              "body": {
                "async": false,
                "body": {
                  "body": [],
                  "type": "BlockStatement",
                },
                "generator": false,
                "id": {
                  "name": "f",
                  "type": "Identifier",
                },
                "params": [],
                "type": "FunctionDeclaration",
              },
              "label": {
                "name": "bar",
                "type": "Identifier",
              },
              "type": "LabeledStatement",
            },
            "label": {
              "name": "foo",
              "type": "Identifier",
            },
            "type": "LabeledStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(){ let f; } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "id": {
                  "loc": {
                    "end": {
                      "column": 19,
                      "line": 1,
                    },
                    "start": {
                      "column": 18,
                      "line": 1,
                    },
                  },
                  "name": "f",
                  "type": "Identifier",
                },
                "init": null,
                "loc": {
                  "end": {
                    "column": 19,
                    "line": 1,
                  },
                  "start": {
                    "column": 18,
                    "line": 1,
                  },
                },
                "type": "VariableDeclarator",
              },
            ],
            "kind": "let",
            "loc": {
              "end": {
                "column": 20,
                "line": 1,
              },
              "start": {
                "column": 14,
                "line": 1,
              },
            },
            "type": "VariableDeclaration",
          },
        ],
        "loc": {
          "end": {
            "column": 22,
            "line": 1,
          },
          "start": {
            "column": 12,
            "line": 1,
          },
        },
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "f",
        "type": "Identifier",
      },
      "loc": {
        "end": {
          "column": 22,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "loc": {
    "end": {
      "column": 22,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(){}
/foo/ 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
    {
      "expression": {
        "regex": {
          "flags": "",
          "pattern": "foo",
        },
        "type": "Literal",
        "value": /foo/,
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(){}
/foo/ 2`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
    {
      "expression": {
        "regex": {
          "flags": "",
          "pattern": "foo",
        },
        "type": "Literal",
        "value": /foo/,
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(){}
/foo/g 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
    {
      "expression": {
        "regex": {
          "flags": "g",
          "pattern": "foo",
        },
        "type": "Literal",
        "value": /foo/g,
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(){} function f(){} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "loc": {
          "end": {
            "column": 14,
            "line": 1,
          },
          "start": {
            "column": 12,
            "line": 1,
          },
        },
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "f",
        "type": "Identifier",
      },
      "loc": {
        "end": {
          "column": 14,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
    {
      "async": false,
      "body": {
        "body": [],
        "loc": {
          "end": {
            "column": 29,
            "line": 1,
          },
          "start": {
            "column": 27,
            "line": 1,
          },
        },
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "loc": {
          "end": {
            "column": 25,
            "line": 1,
          },
          "start": {
            "column": 24,
            "line": 1,
          },
        },
        "name": "f",
        "type": "Identifier",
      },
      "loc": {
        "end": {
          "column": 29,
          "line": 1,
        },
        "start": {
          "column": 15,
          "line": 1,
        },
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "loc": {
    "end": {
      "column": 29,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f([foo,,bar] = x){} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "loc": {
          "end": {
            "column": 28,
            "line": 1,
          },
          "start": {
            "column": 26,
            "line": 1,
          },
        },
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "f",
        "type": "Identifier",
      },
      "loc": {
        "end": {
          "column": 28,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "params": [
        {
          "left": {
            "elements": [
              {
                "loc": {
                  "end": {
                    "column": 15,
                    "line": 1,
                  },
                  "start": {
                    "column": 12,
                    "line": 1,
                  },
                },
                "name": "foo",
                "type": "Identifier",
              },
              null,
              {
                "loc": {
                  "end": {
                    "column": 20,
                    "line": 1,
                  },
                  "start": {
                    "column": 17,
                    "line": 1,
                  },
                },
                "name": "bar",
                "type": "Identifier",
              },
            ],
            "loc": {
              "end": {
                "column": 21,
                "line": 1,
              },
              "start": {
                "column": 11,
                "line": 1,
              },
            },
            "type": "ArrayPattern",
          },
          "loc": {
            "end": {
              "column": 25,
              "line": 1,
            },
            "start": {
              "column": 11,
              "line": 1,
            },
          },
          "right": {
            "loc": {
              "end": {
                "column": 25,
                "line": 1,
              },
              "start": {
                "column": 24,
                "line": 1,
              },
            },
            "name": "x",
            "type": "Identifier",
          },
          "type": "AssignmentPattern",
        },
      ],
      "type": "FunctionDeclaration",
    },
  ],
  "loc": {
    "end": {
      "column": 28,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(x) { { const x = y } } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "body": [
              {
                "declarations": [
                  {
                    "end": 29,
                    "id": {
                      "end": 25,
                      "name": "x",
                      "range": [
                        24,
                        25,
                      ],
                      "start": 24,
                      "type": "Identifier",
                    },
                    "init": {
                      "end": 29,
                      "name": "y",
                      "range": [
                        28,
                        29,
                      ],
                      "start": 28,
                      "type": "Identifier",
                    },
                    "range": [
                      24,
                      29,
                    ],
                    "start": 24,
                    "type": "VariableDeclarator",
                  },
                ],
                "end": 29,
                "kind": "const",
                "range": [
                  18,
                  29,
                ],
                "start": 18,
                "type": "VariableDeclaration",
              },
            ],
            "end": 31,
            "range": [
              16,
              31,
            ],
            "start": 16,
            "type": "BlockStatement",
          },
        ],
        "end": 33,
        "range": [
          14,
          33,
        ],
        "start": 14,
        "type": "BlockStatement",
      },
      "end": 33,
      "generator": false,
      "id": {
        "end": 10,
        "name": "f",
        "range": [
          9,
          10,
        ],
        "start": 9,
        "type": "Identifier",
      },
      "params": [
        {
          "end": 12,
          "name": "x",
          "range": [
            11,
            12,
          ],
          "start": 11,
          "type": "Identifier",
        },
      ],
      "range": [
        0,
        33,
      ],
      "start": 0,
      "type": "FunctionDeclaration",
    },
  ],
  "end": 33,
  "range": [
    0,
    33,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(x) {{var x}} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "body": [
              {
                "declarations": [
                  {
                    "id": {
                      "name": "x",
                      "type": "Identifier",
                    },
                    "init": null,
                    "type": "VariableDeclarator",
                  },
                ],
                "kind": "var",
                "type": "VariableDeclaration",
              },
            ],
            "type": "BlockStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "f",
        "type": "Identifier",
      },
      "params": [
        {
          "name": "x",
          "type": "Identifier",
        },
      ],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function f(x) {var x} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "end": 20,
                "id": {
                  "end": 20,
                  "name": "x",
                  "range": [
                    19,
                    20,
                  ],
                  "start": 19,
                  "type": "Identifier",
                },
                "init": null,
                "range": [
                  19,
                  20,
                ],
                "start": 19,
                "type": "VariableDeclarator",
              },
            ],
            "end": 20,
            "kind": "var",
            "range": [
              15,
              20,
            ],
            "start": 15,
            "type": "VariableDeclaration",
          },
        ],
        "end": 21,
        "range": [
          14,
          21,
        ],
        "start": 14,
        "type": "BlockStatement",
      },
      "end": 21,
      "generator": false,
      "id": {
        "end": 10,
        "name": "f",
        "range": [
          9,
          10,
        ],
        "start": 9,
        "type": "Identifier",
      },
      "params": [
        {
          "end": 12,
          "name": "x",
          "range": [
            11,
            12,
          ],
          "start": 11,
          "type": "Identifier",
        },
      ],
      "range": [
        0,
        21,
      ],
      "start": 0,
      "type": "FunctionDeclaration",
    },
  ],
  "end": 21,
  "range": [
    0,
    21,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function foo() {} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "foo",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function foo(package) {} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "name": "foo",
        "type": "Identifier",
      },
      "params": [
        {
          "name": "package",
          "type": "Identifier",
        },
      ],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function g() {  function f(){} function f(){} } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "async": false,
            "body": {
              "body": [],
              "loc": {
                "end": {
                  "column": 30,
                  "line": 1,
                },
                "start": {
                  "column": 28,
                  "line": 1,
                },
              },
              "type": "BlockStatement",
            },
            "generator": false,
            "id": {
              "loc": {
                "end": {
                  "column": 26,
                  "line": 1,
                },
                "start": {
                  "column": 25,
                  "line": 1,
                },
              },
              "name": "f",
              "type": "Identifier",
            },
            "loc": {
              "end": {
                "column": 30,
                "line": 1,
              },
              "start": {
                "column": 16,
                "line": 1,
              },
            },
            "params": [],
            "type": "FunctionDeclaration",
          },
          {
            "async": false,
            "body": {
              "body": [],
              "loc": {
                "end": {
                  "column": 45,
                  "line": 1,
                },
                "start": {
                  "column": 43,
                  "line": 1,
                },
              },
              "type": "BlockStatement",
            },
            "generator": false,
            "id": {
              "loc": {
                "end": {
                  "column": 41,
                  "line": 1,
                },
                "start": {
                  "column": 40,
                  "line": 1,
                },
              },
              "name": "f",
              "type": "Identifier",
            },
            "loc": {
              "end": {
                "column": 45,
                "line": 1,
              },
              "start": {
                "column": 31,
                "line": 1,
              },
            },
            "params": [],
            "type": "FunctionDeclaration",
          },
        ],
        "loc": {
          "end": {
            "column": 47,
            "line": 1,
          },
          "start": {
            "column": 13,
            "line": 1,
          },
        },
        "type": "BlockStatement",
      },
      "generator": false,
      "id": {
        "loc": {
          "end": {
            "column": 10,
            "line": 1,
          },
          "start": {
            "column": 9,
            "line": 1,
          },
        },
        "name": "g",
        "type": "Identifier",
      },
      "loc": {
        "end": {
          "column": 47,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "loc": {
    "end": {
      "column": 47,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function shouldThrow(func, errorMessage) {
    var errorThrown = false;
    var error = null;
    try {
        func();
    } catch (e) {
        errorThrown = true;
        error = e;
    }
} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "declarations": [
              {
                "end": 70,
                "id": {
                  "end": 62,
                  "name": "errorThrown",
                  "range": [
                    51,
                    62,
                  ],
                  "start": 51,
                  "type": "Identifier",
                },
                "init": {
                  "end": 70,
                  "range": [
                    65,
                    70,
                  ],
                  "raw": "false",
                  "start": 65,
                  "type": "Literal",
                  "value": false,
                },
                "range": [
                  51,
                  70,
                ],
                "start": 51,
                "type": "VariableDeclarator",
              },
            ],
            "end": 71,
            "kind": "var",
            "range": [
              47,
              71,
            ],
            "start": 47,
            "type": "VariableDeclaration",
          },
          {
            "declarations": [
              {
                "end": 92,
                "id": {
                  "end": 85,
                  "name": "error",
                  "range": [
                    80,
                    85,
                  ],
                  "start": 80,
                  "type": "Identifier",
                },
                "init": {
                  "end": 92,
                  "range": [
                    88,
                    92,
                  ],
                  "raw": "null",
                  "start": 88,
                  "type": "Literal",
                  "value": null,
                },
                "range": [
                  80,
                  92,
                ],
                "start": 80,
                "type": "VariableDeclarator",
              },
            ],
            "end": 93,
            "kind": "var",
            "range": [
              76,
              93,
            ],
            "start": 76,
            "type": "VariableDeclaration",
          },
          {
            "block": {
              "body": [
                {
                  "end": 119,
                  "expression": {
                    "arguments": [],
                    "callee": {
                      "end": 116,
                      "name": "func",
                      "range": [
                        112,
                        116,
                      ],
                      "start": 112,
                      "type": "Identifier",
                    },
                    "end": 118,
                    "optional": false,
                    "range": [
                      112,
                      118,
                    ],
                    "start": 112,
                    "type": "CallExpression",
                  },
                  "range": [
                    112,
                    119,
                  ],
                  "start": 112,
                  "type": "ExpressionStatement",
                },
              ],
              "end": 125,
              "range": [
                102,
                125,
              ],
              "start": 102,
              "type": "BlockStatement",
            },
            "end": 190,
            "finalizer": null,
            "handler": {
              "body": {
                "body": [
                  {
                    "end": 165,
                    "expression": {
                      "end": 164,
                      "left": {
                        "end": 157,
                        "name": "errorThrown",
                        "range": [
                          146,
                          157,
                        ],
                        "start": 146,
                        "type": "Identifier",
                      },
                      "operator": "=",
                      "range": [
                        146,
                        164,
                      ],
                      "right": {
                        "end": 164,
                        "range": [
                          160,
                          164,
                        ],
                        "raw": "true",
                        "start": 160,
                        "type": "Literal",
                        "value": true,
                      },
                      "start": 146,
                      "type": "AssignmentExpression",
                    },
                    "range": [
                      146,
                      165,
                    ],
                    "start": 146,
                    "type": "ExpressionStatement",
                  },
                  {
                    "end": 184,
                    "expression": {
                      "end": 183,
                      "left": {
                        "end": 179,
                        "name": "error",
                        "range": [
                          174,
                          179,
                        ],
                        "start": 174,
                        "type": "Identifier",
                      },
                      "operator": "=",
                      "range": [
                        174,
                        183,
                      ],
                      "right": {
                        "end": 183,
                        "name": "e",
                        "range": [
                          182,
                          183,
                        ],
                        "start": 182,
                        "type": "Identifier",
                      },
                      "start": 174,
                      "type": "AssignmentExpression",
                    },
                    "range": [
                      174,
                      184,
                    ],
                    "start": 174,
                    "type": "ExpressionStatement",
                  },
                ],
                "end": 190,
                "range": [
                  136,
                  190,
                ],
                "start": 136,
                "type": "BlockStatement",
              },
              "end": 190,
              "param": {
                "end": 134,
                "name": "e",
                "range": [
                  133,
                  134,
                ],
                "start": 133,
                "type": "Identifier",
              },
              "range": [
                126,
                190,
              ],
              "start": 126,
              "type": "CatchClause",
            },
            "range": [
              98,
              190,
            ],
            "start": 98,
            "type": "TryStatement",
          },
        ],
        "end": 192,
        "range": [
          41,
          192,
        ],
        "start": 41,
        "type": "BlockStatement",
      },
      "end": 192,
      "generator": false,
      "id": {
        "end": 20,
        "name": "shouldThrow",
        "range": [
          9,
          20,
        ],
        "start": 9,
        "type": "Identifier",
      },
      "params": [
        {
          "end": 25,
          "name": "func",
          "range": [
            21,
            25,
          ],
          "start": 21,
          "type": "Identifier",
        },
        {
          "end": 39,
          "name": "errorMessage",
          "range": [
            27,
            39,
          ],
          "start": 27,
          "type": "Identifier",
        },
      ],
      "range": [
        0,
        192,
      ],
      "start": 0,
      "type": "FunctionDeclaration",
    },
  ],
  "end": 192,
  "range": [
    0,
    192,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function w(casecase){y:j:function casecase(){}} 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "body": {
              "body": {
                "async": false,
                "body": {
                  "body": [],
                  "end": 46,
                  "range": [
                    44,
                    46,
                  ],
                  "start": 44,
                  "type": "BlockStatement",
                },
                "end": 46,
                "generator": false,
                "id": {
                  "end": 42,
                  "name": "casecase",
                  "range": [
                    34,
                    42,
                  ],
                  "start": 34,
                  "type": "Identifier",
                },
                "params": [],
                "range": [
                  25,
                  46,
                ],
                "start": 25,
                "type": "FunctionDeclaration",
              },
              "end": 46,
              "label": {
                "end": 24,
                "name": "j",
                "range": [
                  23,
                  24,
                ],
                "start": 23,
                "type": "Identifier",
              },
              "range": [
                23,
                46,
              ],
              "start": 23,
              "type": "LabeledStatement",
            },
            "end": 46,
            "label": {
              "end": 22,
              "name": "y",
              "range": [
                21,
                22,
              ],
              "start": 21,
              "type": "Identifier",
            },
            "range": [
              21,
              46,
            ],
            "start": 21,
            "type": "LabeledStatement",
          },
        ],
        "end": 47,
        "range": [
          20,
          47,
        ],
        "start": 20,
        "type": "BlockStatement",
      },
      "end": 47,
      "generator": false,
      "id": {
        "end": 10,
        "name": "w",
        "range": [
          9,
          10,
        ],
        "start": 9,
        "type": "Identifier",
      },
      "params": [
        {
          "end": 19,
          "name": "casecase",
          "range": [
            11,
            19,
          ],
          "start": 11,
          "type": "Identifier",
        },
      ],
      "range": [
        0,
        47,
      ],
      "start": 0,
      "type": "FunctionDeclaration",
    },
  ],
  "end": 47,
  "range": [
    0,
    47,
  ],
  "sourceType": "script",
  "start": 0,
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function* a( [ {  x  =  y  }  =  a ] )  { } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [],
        "loc": {
          "end": {
            "column": 43,
            "line": 1,
          },
          "start": {
            "column": 40,
            "line": 1,
          },
        },
        "type": "BlockStatement",
      },
      "generator": true,
      "id": {
        "loc": {
          "end": {
            "column": 11,
            "line": 1,
          },
          "start": {
            "column": 10,
            "line": 1,
          },
        },
        "name": "a",
        "type": "Identifier",
      },
      "loc": {
        "end": {
          "column": 43,
          "line": 1,
        },
        "start": {
          "column": 0,
          "line": 1,
        },
      },
      "params": [
        {
          "elements": [
            {
              "left": {
                "loc": {
                  "end": {
                    "column": 28,
                    "line": 1,
                  },
                  "start": {
                    "column": 15,
                    "line": 1,
                  },
                },
                "properties": [
                  {
                    "computed": false,
                    "key": {
                      "loc": {
                        "end": {
                          "column": 19,
                          "line": 1,
                        },
                        "start": {
                          "column": 18,
                          "line": 1,
                        },
                      },
                      "name": "x",
                      "type": "Identifier",
                    },
                    "kind": "init",
                    "loc": {
                      "end": {
                        "column": 25,
                        "line": 1,
                      },
                      "start": {
                        "column": 18,
                        "line": 1,
                      },
                    },
                    "method": false,
                    "shorthand": true,
                    "type": "Property",
                    "value": {
                      "left": {
                        "loc": {
                          "end": {
                            "column": 19,
                            "line": 1,
                          },
                          "start": {
                            "column": 18,
                            "line": 1,
                          },
                        },
                        "name": "x",
                        "type": "Identifier",
                      },
                      "loc": {
                        "end": {
                          "column": 25,
                          "line": 1,
                        },
                        "start": {
                          "column": 18,
                          "line": 1,
                        },
                      },
                      "right": {
                        "loc": {
                          "end": {
                            "column": 25,
                            "line": 1,
                          },
                          "start": {
                            "column": 24,
                            "line": 1,
                          },
                        },
                        "name": "y",
                        "type": "Identifier",
                      },
                      "type": "AssignmentPattern",
                    },
                  },
                ],
                "type": "ObjectPattern",
              },
              "loc": {
                "end": {
                  "column": 34,
                  "line": 1,
                },
                "start": {
                  "column": 15,
                  "line": 1,
                },
              },
              "right": {
                "loc": {
                  "end": {
                    "column": 34,
                    "line": 1,
                  },
                  "start": {
                    "column": 33,
                    "line": 1,
                  },
                },
                "name": "a",
                "type": "Identifier",
              },
              "type": "AssignmentPattern",
            },
          ],
          "loc": {
            "end": {
              "column": 36,
              "line": 1,
            },
            "start": {
              "column": 13,
              "line": 1,
            },
          },
          "type": "ArrayPattern",
        },
      ],
      "type": "FunctionDeclaration",
    },
  ],
  "loc": {
    "end": {
      "column": 43,
      "line": 1,
    },
    "start": {
      "column": 0,
      "line": 1,
    },
  },
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > function* x() { for (const [j = yield] in (x) => {}) {} } 1`] = `
{
  "body": [
    {
      "async": false,
      "body": {
        "body": [
          {
            "body": {
              "body": [],
              "type": "BlockStatement",
            },
            "left": {
              "declarations": [
                {
                  "id": {
                    "elements": [
                      {
                        "left": {
                          "name": "j",
                          "type": "Identifier",
                        },
                        "right": {
                          "argument": null,
                          "delegate": false,
                          "type": "YieldExpression",
                        },
                        "type": "AssignmentPattern",
                      },
                    ],
                    "type": "ArrayPattern",
                  },
                  "init": null,
                  "type": "VariableDeclarator",
                },
              ],
              "kind": "const",
              "type": "VariableDeclaration",
            },
            "right": {
              "async": false,
              "body": {
                "body": [],
                "type": "BlockStatement",
              },
              "expression": false,
              "generator": false,
              "params": [
                {
                  "name": "x",
                  "type": "Identifier",
                },
              ],
              "type": "ArrowFunctionExpression",
            },
            "type": "ForInStatement",
          },
        ],
        "type": "BlockStatement",
      },
      "generator": true,
      "id": {
        "name": "x",
        "type": "Identifier",
      },
      "params": [],
      "type": "FunctionDeclaration",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Function (pass) > typeof function f(){}
/foo/g 1`] = `
{
  "body": [
    {
      "expression": {
        "left": {
          "left": {
            "argument": {
              "async": false,
              "body": {
                "body": [],
                "type": "BlockStatement",
              },
              "generator": false,
              "id": {
                "name": "f",
                "type": "Identifier",
              },
              "params": [],
              "type": "FunctionExpression",
            },
            "operator": "typeof",
            "prefix": true,
            "type": "UnaryExpression",
          },
          "operator": "/",
          "right": {
            "name": "foo",
            "type": "Identifier",
          },
          "type": "BinaryExpression",
        },
        "operator": "/",
        "right": {
          "name": "g",
          "type": "Identifier",
        },
        "type": "BinaryExpression",
      },
      "type": "ExpressionStatement",
    },
  ],
  "sourceType": "script",
  "type": "Program",
}
`;

exports[`Declarations - Function > Declarations - Functions (fail) > "use strict"; function eval() {} 1`] = `
"SyntaxError [1:23-1:27]: Unexpected eval or arguments in strict mode
> 1 | "use strict"; function eval() {}
    |                        ^^^^ Unexpected eval or arguments in strict mode"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > class c {foo(x=package=y){ "use strict"; }} 1`] = `
"SyntaxError [1:15-1:22]: Unexpected token: 'package'
> 1 | class c {foo(x=package=y){ "use strict"; }}
    |                ^^^^^^^ Unexpected token: 'package'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > f = function f(x=package=10){ "use strict"; } 1`] = `
"SyntaxError [1:30-1:43]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | f = function f(x=package=10){ "use strict"; }
    |                               ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > f(x = eval = 10) => { "use strict"; } 1`] = `
"SyntaxError [1:17-1:19]: Unexpected token: '=>'
> 1 | f(x = eval = 10) => { "use strict"; }
    |                  ^^ Unexpected token: '=>'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > f(x=package=10) => { "use strict"; } 1`] = `
"SyntaxError [1:16-1:18]: Unexpected token: '=>'
> 1 | f(x=package=10) => { "use strict"; }
    |                 ^^ Unexpected token: '=>'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *await() {} 1`] = `
"SyntaxError [1:10-1:15]: Can not use \`await\` as identifier in module or async func
> 1 | function *await() {}
    |           ^^^^^ Can not use \`await\` as identifier in module or async func"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *f(){ class x { foo(x=new (yield)()){} }  } 1`] = `
"SyntaxError [1:36-1:41]: 'yield' may not be used as an identifier in this context
> 1 | function *f(){ class x { foo(x=new (yield)()){} }  }
    |                                     ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *f(){ class x { foo(x=yield y){} }  } 1`] = `
"SyntaxError [1:31-1:36]: 'yield' may not be used as an identifier in this context
> 1 | function *f(){ class x { foo(x=yield y){} }  }
    |                                ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *f(){ class x { foo(x=yield){} }  } 1`] = `
"SyntaxError [1:31-1:36]: 'yield' may not be used as an identifier in this context
> 1 | function *f(){ class x { foo(x=yield){} }  }
    |                                ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *f(){ class x { foo(yield){} }  } 1`] = `
"SyntaxError [1:29-1:34]: Unexpected strict mode reserved word
> 1 | function *f(){ class x { foo(yield){} }  }
    |                              ^^^^^ Unexpected strict mode reserved word"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *f(){ class x extends yield { }  } 1`] = `
"SyntaxError [1:37-1:38]: Invalid left-hand side in assignment
> 1 | function *f(){ class x extends yield { }  }
    |                                      ^ Invalid left-hand side in assignment"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *f(){ class x extends yield y { }  } 1`] = `
"SyntaxError [1:37-1:38]: Invalid left-hand side in assignment
> 1 | function *f(){ class x extends yield y { }  }
    |                                      ^ Invalid left-hand side in assignment"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function *f(){ class yield { }  } 1`] = `
"SyntaxError [1:21-1:26]: 'yield' may not be used as an identifier in this context
> 1 | function *f(){ class yield { }  }
    |                      ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function 00004() { "use strict"; 00004; } 1`] = `
"SyntaxError [1:9-1:14]: Unexpected token: 'number'
> 1 | function 00004() { "use strict"; 00004; }
    |          ^^^^^ Unexpected token: 'number'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function a({x: {}.length}){} 1`] = `
"SyntaxError [1:25-1:26]: The binding declaration is not destructible
> 1 | function a({x: {}.length}){}
    |                          ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function a({x: {x: y}.length}){} 1`] = `
"SyntaxError [1:29-1:30]: The binding declaration is not destructible
> 1 | function a({x: {x: y}.length}){}
    |                              ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function a({x: class{}}){} 1`] = `
"SyntaxError [1:23-1:24]: The binding declaration is not destructible
> 1 | function a({x: class{}}){}
    |                        ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function a({x: false}){} 1`] = `
"SyntaxError [1:21-1:22]: The binding declaration is not destructible
> 1 | function a({x: false}){}
    |                      ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function a({x: null}){} 1`] = `
"SyntaxError [1:20-1:21]: The binding declaration is not destructible
> 1 | function a({x: null}){}
    |                     ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function a({x: typeof x}){} 1`] = `
"SyntaxError [1:24-1:25]: The binding declaration is not destructible
> 1 | function a({x: typeof x}){}
    |                         ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function a({x: void x}){} 1`] = `
"SyntaxError [1:22-1:23]: The binding declaration is not destructible
> 1 | function a({x: void x}){}
    |                       ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function arguments() {"use strict";} 1`] = `
"SyntaxError [1:35-1:36]: Unexpected eval or arguments in strict mode
> 1 | function arguments() {"use strict";}
    |                                    ^ Unexpected eval or arguments in strict mode"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function await() {} 1`] = `
"SyntaxError [1:9-1:14]: Can not use \`await\` as identifier in module or async func
> 1 | function await() {}
    |          ^^^^^ Can not use \`await\` as identifier in module or async func"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function eval() {"use strict";} 1`] = `
"SyntaxError [1:30-1:31]: Unexpected eval or arguments in strict mode
> 1 | function eval() {"use strict";}
    |                               ^ Unexpected eval or arguments in strict mode"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f() { class await { }   } 1`] = `
"SyntaxError [1:21-1:26]: Can not use \`await\` as identifier in module or async func
> 1 | function f() { class await { }   }
    |                      ^^^^^ Can not use \`await\` as identifier in module or async func"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f() { class x { foo(await y){} }   } 1`] = `
"SyntaxError [1:35-1:36]: Expected ')'
> 1 | function f() { class x { foo(await y){} }   }
    |                                    ^ Expected ')'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f() { class x { foo(x=await y){} }   } 1`] = `
"SyntaxError [1:31-1:36]: Await expression not allowed in formal parameter
> 1 | function f() { class x { foo(x=await y){} }   }
    |                                ^^^^^ Await expression not allowed in formal parameter"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f() { class x extends await { }   } 1`] = `
"SyntaxError [1:31-1:36]: Await is only valid in async functions
> 1 | function f() { class x extends await { }   }
    |                                ^^^^^ Await is only valid in async functions"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f() { class x extends await y { }   } 1`] = `
"SyntaxError [1:37-1:38]: Expected '{'
> 1 | function f() { class x extends await y { }   }
    |                                      ^ Expected '{'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f() { class x extends foo(await y) { }   } 1`] = `
"SyntaxError [1:41-1:42]: Expected ')'
> 1 | function f() { class x extends foo(await y) { }   }
    |                                          ^ Expected ')'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { [yield y](){} }  } 1`] = `
"SyntaxError [1:25-1:30]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { [yield y](){} }  }
    |                          ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { [yield y](){} }  } 2`] = `
"SyntaxError [1:25-1:30]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { [yield y](){} }  }
    |                          ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { [yield](){} }  } 1`] = `
"SyntaxError [1:25-1:30]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { [yield](){} }  }
    |                          ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { [yield](){} }  } 2`] = `
"SyntaxError [1:25-1:30]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { [yield](){} }  }
    |                          ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(x=new (yield)()){} }  } 1`] = `
"SyntaxError [1:35-1:40]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { foo(x=new (yield)()){} }  }
    |                                    ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(x=new (yield)()){} }  } 2`] = `
"SyntaxError [1:35-1:40]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { foo(x=new (yield)()){} }  }
    |                                    ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(x=yield y){} }  } 1`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { foo(x=yield y){} }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(x=yield y){} }  } 2`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { foo(x=yield y){} }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(x=yield){} }  } 1`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { foo(x=yield){} }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(x=yield){} }  } 2`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x { foo(x=yield){} }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(yield){} }  } 1`] = `
"SyntaxError [1:28-1:33]: Unexpected strict mode reserved word
> 1 | function f(){ class x { foo(yield){} }  }
    |                             ^^^^^ Unexpected strict mode reserved word"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x { foo(yield){} }  } 2`] = `
"SyntaxError [1:28-1:33]: Unexpected strict mode reserved word
> 1 | function f(){ class x { foo(yield){} }  }
    |                             ^^^^^ Unexpected strict mode reserved word"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends foo(yield y) { }  } 1`] = `
"SyntaxError [1:34-1:39]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends foo(yield y) { }  }
    |                                   ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends foo(yield y) { }  } 2`] = `
"SyntaxError [1:34-1:39]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends foo(yield y) { }  }
    |                                   ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends foo(yield) { }  } 1`] = `
"SyntaxError [1:34-1:39]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends foo(yield) { }  }
    |                                   ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends foo(yield) { }  } 2`] = `
"SyntaxError [1:34-1:39]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends foo(yield) { }  }
    |                                   ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends yield { }  } 1`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends yield { }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends yield { }  } 2`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends yield { }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends yield y { }  } 1`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends yield y { }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class x extends yield y { }  } 2`] = `
"SyntaxError [1:30-1:35]: 'yield' may not be used as an identifier in this context
> 1 | function f(){ class x extends yield y { }  }
    |                               ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class yield { }  } 1`] = `
"SyntaxError [1:20-1:25]: Unexpected strict mode reserved word
> 1 | function f(){ class yield { }  }
    |                     ^^^^^ Unexpected strict mode reserved word"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(){ class yield { }  } 2`] = `
"SyntaxError [1:20-1:25]: Unexpected strict mode reserved word
> 1 | function f(){ class yield { }  }
    |                     ^^^^^ Unexpected strict mode reserved word"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(,,){} 1`] = `
"SyntaxError [1:11-1:12]: Expected ')'
> 1 | function f(,,){}
    |            ^ Expected ')'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f([x=x()=x]){} 1`] = `
"SyntaxError [1:17-1:18]: Invalid left-hand side in assignment
> 1 | function f([x=x()=x]){}
    |                  ^ Invalid left-hand side in assignment"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(async function() {}) { } 1`] = `
"SyntaxError [1:17-1:25]: Expected ')'
> 1 | function f(async function() {}) { }
    |                  ^^^^^^^^ Expected ')'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(x = let = 10) {} 1`] = `
"SyntaxError [1:19-1:20]: The identifier 'let' must not be in expression position in strict mode
> 1 | function f(x = let = 10) {}
    |                    ^ The identifier 'let' must not be in expression position in strict mode"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(x = package = 10) { "use strict"; } 1`] = `
"SyntaxError [1:31-1:44]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | function f(x = package = 10) { "use strict"; }
    |                                ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(x = package = 10) {} 1`] = `
"SyntaxError [1:15-1:22]: Unexpected token: 'package'
> 1 | function f(x = package = 10) {}
    |                ^^^^^^^ Unexpected token: 'package'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(x = yield = 10) {} 1`] = `
"SyntaxError [1:15-1:20]: 'yield' may not be used as an identifier in this context
> 1 | function f(x = yield = 10) {}
    |                ^^^^^ 'yield' may not be used as an identifier in this context"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function f(x= package =10){ "use strict"; } 1`] = `
"SyntaxError [1:28-1:41]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | function f(x= package =10){ "use strict"; }
    |                             ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo() { "use strict"; 00004; } 1`] = `
"SyntaxError [1:31-1:32]: Octal escape sequences are not allowed in strict mode
> 1 | function foo() { "use strict"; 00004; }
    |                                ^ Octal escape sequences are not allowed in strict mode"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo() { 00004; } 1`] = `
"SyntaxError [1:17-1:18]: Octal escape sequences are not allowed in strict mode
> 1 | function foo() { 00004; }
    |                  ^ Octal escape sequences are not allowed in strict mode"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo(001, 003) { "use strict"; } 1`] = `
"SyntaxError [1:13-1:16]: Unexpected token: 'number'
> 1 | function foo(001, 003) { "use strict"; }
    |              ^^^ Unexpected token: 'number'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo(001, 003) { "use strict"; } 2`] = `
"SyntaxError [1:13-1:16]: Unexpected token: 'number'
> 1 | function foo(001, 003) { "use strict"; }
    |              ^^^ Unexpected token: 'number'"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo(p\\141ckage) { } 1`] = `
"SyntaxError [1:13-1:14]: Illegal Unicode escape sequence
> 1 | function foo(p\\141ckage) { }
    |              ^ Illegal Unicode escape sequence"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo(p\\u0061ckage) { "use strict"; } 1`] = `
"SyntaxError [1:43-1:44]: Unexpected strict mode reserved word
> 1 | function foo(p\\u0061ckage) { "use strict"; }
    |                                            ^ Unexpected strict mode reserved word"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo(p\\x61ckage) { "use strict"; } 1`] = `
"SyntaxError [1:13-1:14]: Illegal Unicode escape sequence
> 1 | function foo(p\\x61ckage) { "use strict"; }
    |              ^ Illegal Unicode escape sequence"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo(p\\x61ckage) { } 1`] = `
"SyntaxError [1:13-1:14]: Illegal Unicode escape sequence
> 1 | function foo(p\\x61ckage) { }
    |              ^ Illegal Unicode escape sequence"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function foo(package) { "use strict"; } 1`] = `
"SyntaxError [1:38-1:39]: Unexpected strict mode reserved word
> 1 | function foo(package) { "use strict"; }
    |                                       ^ Unexpected strict mode reserved word"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function super() {"use strict";} 1`] = `
"SyntaxError [1:9-1:14]: Invalid keyword
> 1 | function super() {"use strict";}
    |          ^^^^^ Invalid keyword"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function test({...[]}) {} 1`] = `
"SyntaxError [1:21-1:22]: The binding declaration is not destructible
> 1 | function test({...[]}) {}
    |                      ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function test({...{}}) {} 1`] = `
"SyntaxError [1:21-1:22]: The binding declaration is not destructible
> 1 | function test({...{}}) {}
    |                      ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function test({...x = 1}) {} 1`] = `
"SyntaxError [1:24-1:25]: The binding declaration is not destructible
> 1 | function test({...x = 1}) {}
    |                         ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function test({...x = 1}) {} 2`] = `
"SyntaxError [1:24-1:25]: The binding declaration is not destructible
> 1 | function test({...x = 1}) {}
    |                         ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function test({...x = 1}) {} 3`] = `
"SyntaxError [1:24-1:25]: The binding declaration is not destructible
> 1 | function test({...x = 1}) {}
    |                         ^ The binding declaration is not destructible"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > function w(casecase){y:j:function casecase(){}} 1`] = `
"SyntaxError [1:25-1:33]: Without web compatibility enabled functions can not be declared at top level, inside a block, or as the body of an if statement
> 1 | function w(casecase){y:j:function casecase(){}}
    |                          ^^^^^^^^ Without web compatibility enabled functions can not be declared at top level, inside a block, or as the body of an if statement"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > o = {foo(x = implements = y){ "use strict"; }} 1`] = `
"SyntaxError [1:30-1:43]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | o = {foo(x = implements = y){ "use strict"; }}
    |                               ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > o = {foo(x = let = y){ "use strict"; }} 1`] = `
"SyntaxError [1:23-1:36]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | o = {foo(x = let = y){ "use strict"; }}
    |                        ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > o = {foo(x = package = y){ "use strict"; }} 1`] = `
"SyntaxError [1:27-1:40]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | o = {foo(x = package = y){ "use strict"; }}
    |                            ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > o = {foo(x= eval = y){ "use strict"; }} 1`] = `
"SyntaxError [1:23-1:36]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | o = {foo(x= eval = y){ "use strict"; }}
    |                        ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;

exports[`Declarations - Function > Declarations - Functions (fail) > o = {foo(x=package=y){ "use strict"; }} 1`] = `
"SyntaxError [1:23-1:36]: Illegal 'use strict' directive in function with non-simple parameter list
> 1 | o = {foo(x=package=y){ "use strict"; }}
    |                        ^^^^^^^^^^^^^ Illegal 'use strict' directive in function with non-simple parameter list"
`;
